# mcp-examples

./: .clineignore  .gitignore  Makefile  README.md  TODO  gotchas.md
.clinerules/: documentation_guidelines.md
.continue/assistants/: config.yaml
.continue/docs/: example-uv-Dockerfile.yaml  using-uv-in-docker.yaml
.continue/mcpServers/: cognee-server.yaml  contexty-mcp-server.yaml  fastmcp-util-server.yaml  local-sentiment-analysis.yaml  memory-mcp-server-codebase.yaml  taskmaster-mcp-server.yaml
.continue/prompts/: concise-planner.yaml  reflect-on-dockerfile-generation.yaml  repo-exploration.yaml  repo-kg-prompt.yaml  retroactive-kg-update.yaml  store-in-memory.yaml
.continue/rules/: always-store-in-memory.md  cognee_rules.yaml  concise-thinker.md  dockerfile-generation-arbitrary-service.md  expand-requirements-to-mcp-prompt.md  generate-uv-dockerfile.md  ground-in-repo-truths.md  no-user-input-requests.md  project_root.md  (+2 more)
.taskmaster/: config.json  state.json
agent-cli/: README.md  package-lock.json  pyproject.toml
agent-web-interface/: README.md  agent_config.py  host.py  instructions.py  main.py  multi_agent.py  pyproject.toml  requirements.txt  tool_converter.py
agent-web-interface/tools/: continue_builtins.py
docs/: definitions.md
fastmcp-util-server/: README.md  main.py  pyproject.toml  server-info.json
mcp-cli/: README.md  pyproject.toml
mcp-host/: README.md  main.py  mcp_host.py  mcp_host_factory.py  pyproject.toml
mcp-sentiment-server/: Dockerfile  README.md  main.py  pyproject.toml  remote_server.json  requiremnts.txt
(+4 files in other folders)
