[project]
name = "mcp-sentiment-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio[mcp]>=5.38.2",
    "textblob>=0.19.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]


[tool.ruff]
# Set the maximum line length to 128.
line-length = 128

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]